@@ -1,5 +1,7 @@
 = ActiveMerchant CHANGELOG
 
+* Balanced: Add support for appears_on_statement_as [duff]
+
 == Version 1.42.2 (November 13th, 2013)
 
 * Renew public certificate
